# pdf-manager

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.githooks/: pre-commit
.github/scripts/: prepare_sample_pdf_job.py
.github/workflows/: desktop-frontend-sync.yml  release-desktop.yml  release-docker.yml  translate-sample-pdf.yml  translation-replay.yml
backend/rust_api/: API_SPEC.md  CURRENT_API_MAP.md  OCR_PROVIDER_CONTRACT.md  OCR_Service_API.md  RUST_API_ARCHITECTURE.md  RUST_API_DIRECTORY_MAP.md  STAGE_EXECUTION_CONTRACT.md  frontend_request_example.md
backend/rust_api/docs/: LIBRARY_API.md  README.md
backend/scripts/: README.md
backend/scripts/devtools/: check_stage_specs_contract.py  replay_translation_item.py  run_golden_flow.py  translation_debug_api.py
desktop/: main.js  package-lock.json  package.json  preload.js  splash.html
desktop/scripts/: check-frontend-bundle.mjs  prepare-app.mjs  sync-win-frontend.mjs
desktop/src/runtime/: README.md
doc/: README.md
doc/adr/: 0001-use-document-v1-as-ir.md  0002-use-typst-for-overlay-rendering.md
doc/core/: README.md
doc/reference/: README.md
docker/: Dockerfile.app  Dockerfile.app.local  build-arm64.sh  release-images.sh
docker/delivery/: README.md  docker-compose.yml
frontend/: detail.html  index.html  package.json  reader.html  styles.css
frontend/scripts/: desktop-first-run-smoke.mjs  frontend-status-smoke.mjs  pdf-manager-frontend.service  serve_static.py
frontend/src/: input.css
scripts/: start.ps1  start.sh
(+165 files in other folders)
